# capabilities

./: .gitignore  Cargo.toml  Rocket.toml
migrations/: 20250327180915_create_users_and_authentications.down.sql  20250327180915_create_users_and_authentications.up.sql  20250328122703_create_user_skills.down.sql  20250328122703_create_user_skills.up.sql  20250328122703_user_skills.up.sql  20250329200843_create_backup_codes.down.sql  20250329200843_create_backup_codes.up.sql  20250329200850_create_invitations.down.sql  20250329200850_create_invitations.up.sql  20250330205020_create_activities.down.sql  20250330205020_create_activities.up.sql  20250401174124_create_teams_users.down.sql  20250401174124_create_teams_users.up.sql
src/: main.rs
src/api/: authentications.rs  home.rs  invitations.rs  mod.rs  response.rs  teams.rs  token.rs  users.rs
src/api/my/: activities.rs  backup_codes.rs  invitations.rs  mod.rs  teams.rs  user.rs  user_skills.rs
src/api/teams/: invitations.rs  mod.rs  teams.rs  users.rs
src/database/: connection.rs  delete_macros.rs  insert_macros.rs  join_macros.rs  query_macros.rs  traits.rs  update_macros.rs  values.rs
src/models/: activity.rs  authentication.rs  backup_code.rs  capability.rs  invitation.rs  mod.rs  team.rs  team_role.rs  team_user.rs  user.rs  user_skill.rs
src/utils/: backup_codes.rs  mod.rs  passwords.rs  strings.rs  time.rs
