[package]
name = "capabilities_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
http = "1.3.1"
jsonwebtoken = "9.3.1"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "time",
    "chrono",
] }
time = { version = "0.3.40", features = ["serde"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
reqwest = { version = "0.12.14", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
rocket_cors = "0.6.0"
pluralizer = "0.5.0"
rand = "0.9.0"
rand_core = { version = "0.9.3", features = ["os_rng"] }
futures = "0.3.31"
